--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ coreschema==0.0.4
 cryptography==37.0.2
 defusedxml==0.7.1
 Django==4.0.5
+django-filter==22.1
 django-restframework==0.0.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
